# TestFlight-Monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  config.json  config.py  config.sample.json  main.py  monitor.py  notifications.py  pyproject.toml  readme.md  requirements.txt  test_monitor.py
.github/workflows/: ci.yml  release.yml
